--- a/styles/button.module.sass
+++ b/styles/button.module.sass
@@ -40,9 +40,9 @@
   background: rgba(255, 255, 255, 0.3)
 
 .button
-  background: rgb(110, 92, 215)
+  background: var(--secondary-color)
   box-shadow: rgba(0, 0, 0, 0.379) 0px 8px 12px -4px
-  color: white
+  color: var(--on-secondary-color)
   font-size: 1.3rem
   font-weight: bold
   border-radius: 10rem
@@ -64,4 +64,4 @@
   margin: 0rem 0.3rem
 
 .button:hover
-  background: lighten(rgb(110, 92, 215), 3%)
+  // background: lighten(var(--secondary-color), 3%)
