--- a/styles/inscription.module.sass
+++ b/styles/inscription.module.sass
@@ -1,3 +1,5 @@
+@import 'styles/variables'
+    
 .mainContainer
     max-width: 100rem
     margin: auto
@@ -27,14 +29,14 @@
     display: flex
     flex-direction: column
     border-radius: 1rem
-    border: 3px solid #fff8
-    background: #9ee5ff
+    border: 3px solid $surface-border-color
+    background: $surface-color
     overflow: none
 
 .headerContainer > h1
     font-family: 'Rock Salt', cursive
     font-size: 2rem
-    border-bottom: 1px solid #fff8
+    border-bottom: 1px solid $surface-border-color
     padding: 1rem 2rem 0rem 2rem
     margin: 0
 
@@ -57,12 +59,12 @@
 
 .attributesContainer
     border-radius: 1rem
-    border: 3px solid #fff8
-    background: #9ee5ff
+    border: 3px solid $surface-border-color
+    background: $surface-color
 
 .attributesContainer > p
     font-family: 'Rock Salt', cursive
-    border-bottom: 1px solid #fff8
+    border-bottom: 1px solid $surface-border-color
     font-size: 1.2rem
     padding: 0.7rem 2rem 0.7rem 2rem
     margin: 0
@@ -75,8 +77,8 @@
 
 .attribute
     border-radius: 0.5rem
-    border: 1.5px solid #00bbff
-    background: #ccf1ff
+    border: 1.5px solid $attribute-border-color
+    background: $attribute-color
     display: flex
     flex-direction: column
     align-items: center
@@ -92,7 +94,7 @@
     user-select: none
 
 .attribute:hover
-    background: lighten(#ccf1ff, 2%)
+    background: lighten($attribute-color, 2%)
 
 .attribute > p
     margin: 0
