--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -28,7 +28,6 @@ a:link, a:visited, a:hover, a:active
 
 button
   color: black
-  font-family: 'Rock Salt', cursive
   cursor: pointer
   z-index: 100
   -webkit-tap-highlight-color: transparent
@@ -41,3 +40,9 @@ button
 
 button:disabled
   cursor: default
+
+p
+  font-family: 'Nunito', sans-serif
+  
+h1
+  font-family: 'Rock Salt', cursive
