Add color and font documentation

--- a/styles/_variables.sass
+++ b/styles/_variables.sass
@@ -1,7 +1,7 @@
 $primary-color: #75d9ff                 // Background color
 $on-primary-color: black                  // Text color on background
 
-$secondary-color: rgb(110, 92, 215)     // Color of buttons
+$secondary-color: #6e5cd7               // Color of buttons
 $on-secondary-color: white                // Text color on buttons
 
 $image-card-background: white             // Background color of the image cards on the collection page
