--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -1,4 +1,11 @@
 @import 'styles/variables'
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Rock+Salt&display=swap')
+
+p
+  font-family: 'Nunito', sans-serif
+  
+h1
+  font-family: 'Rock Salt', cursive
 
 html, body
   padding: 0
@@ -40,9 +47,3 @@ button
 
 button:disabled
   cursor: default
-
-p
-  font-family: 'Nunito', sans-serif
-  
-h1
-  font-family: 'Rock Salt', cursive
