--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -32,6 +32,15 @@ a:link, a:visited, a:hover, a:active
 *
   box-sizing: border-box
 
+a
+  -webkit-tap-highlight-color: transparent
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -khtml-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+
 button
   color: black
   cursor: pointer
