--- a/styles/inscription.module.sass
+++ b/styles/inscription.module.sass
@@ -60,7 +60,7 @@
     border: 3px solid $surface-border-color
     background: $surface-color
 
-.attributesContainer > p
+.attributesContainer > h1
     border-bottom: 1px solid $surface-border-color
     font-size: 1.2rem
     padding: 0.7rem 2rem 0.7rem 2rem
