--- a/styles/collection.module.sass
+++ b/styles/collection.module.sass
@@ -4,6 +4,7 @@
     display: flex
     flex-direction: row
     align-items: stretch
+    height: 100vh
 
 .collectionContainer p, .resizableContainer p, .filterContainer p
     color: $on-primary-color
