Changed background color.

--- a/styles/_variables.sass
+++ b/styles/_variables.sass
@@ -1,4 +1,4 @@
-$primary-color: #75d9ff                 // Background color
+$primary-color: black                // Background color
 $on-primary-color: black                  // Text color on background
 
 $secondary-color: #6e5cd7               // Color of buttons
