--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -1,17 +1,17 @@
 @import 'styles/variables'
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Rock+Salt&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Genos:ital@1&display=swap')
 
 p
-  font-family: 'Nunito', sans-serif
-  
+font-family: 'Genos', sans-serif;
+
 h1
-  font-family: 'Rock Salt', cursive
+  font-family: 'Genos', sans-serif;
 
 html, body
   padding: 0
   margin: 0
   z-index: -100
-  font-family: 'Nunito', sans-serif
+  font-family: 'Genos', sans-serif;
 
 html
   background: $primary-color
