--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -2,16 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Genos:ital@1&display=swap')
 
 p
-font-family: 'Genos', sans-serif;
+font-family: 'Genos', sans-serif
 
 h1
-  font-family: 'Genos', sans-serif;
+  font-family: 'Genos', sans-serif
 
 html, body
   padding: 0
   margin: 0
   z-index: -100
-  font-family: 'Genos', sans-serif;
+  font-family: 'Genos', sans-serif
 
 html
   background: $primary-color
